--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorator="layouts/layout">
 <div layout:fragment="content" class="container">
-    <h1>스프링 블로그</h1>
+    <h1>스프링 블로그</h1> <hr>
     <div class="col-md-9">
         <div class="row" sec:authorize="hasRole('ROLE_ADMIN')">
             <div class="col-md-6">
@@ -40,14 +40,7 @@
     </div>
 
     <div th:if="!${user}">
-        <form id="login" action="/login" method="POST">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-            <input class="btn btn-primary" type="submit" value="로그인"/>
-        </form>
-    </div>
-
-    <div sec:authorize="hasRole('ROLE_ADMIN')">
-        This content is only shown to administrators.
+        <a href="/login" class="btn btn-primary">로그인</a>
     </div>
 
 </div>
