--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,9 +3,24 @@
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorator="layouts/layout">
+
     <div layout:fragment="content">
+        <div class='container'>
+            <h1>Login</h1> <hr>
 
-        <h1>준비중</h1> <hr>
+            <form th:action="@{/login}" method="POST">
+                <div class="form-group">
+                    <input type="text" name="username" class="form-control" placeholder="Username"/>
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" class="form-control" placeholder="Password"/>
+                </div>
+                <button class="btn btn-primary" type="submit">Login</button>
+            </form>
 
+            <a href="/signup">회원가입 (개발여부 미정)</a><br>
+            <a href="/">Home</a>
+        </div>
     </div>
+
 </html>
