--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -7,3 +7,18 @@
     margin-bottom: 10px;
     padding: 5px;
 }
+
+pre {
+    background-color: #f2f2f2;
+    border-left: 5px solid gray;
+    padding: 5px;
+}
+
+.navbar li {
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray;
+    border-radius: 5px;
+    margin-left : 5px;
+    margin-right : 5px;
+}
