--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -15,6 +15,15 @@
                     <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
                 </div>
                 <div class="form-group">
+                    <label for="category">카테고리</label>
+                    <select class="form-control" id="category">
+                        <option value="etc" selected>ETC</option>
+                        <option value="programming">Programming Language</option>
+                        <option value="network">Network</option>
+                        <option sec:authorize="hasRole('ROLE_ADMIN')" value="work">Work Experience</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label for="contents"> 내용 </label>
                     <textarea class="form-control" id="contents" rows="10" placeholder="내용을 입력하세요"></textarea>
                 </div>
