--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -17,6 +17,15 @@
                         <input type="text" class="form-control" id="title" th:value="${post.title}">
                     </div>
                     <div class="form-group">
+                        <label for="category">카테고리</label>
+                        <select class="form-control" id="category">
+                            <option value="etc" th:selected="${post.category}=='etc'">ETC</option>
+                            <option value="programming" th:selected="${post.category}=='programming'">Programming Language</option>
+                            <option value="network" th:selected="${post.category}=='network'">Network</option>
+                            <option sec:authorize="hasRole('ROLE_ADMIN')" value="work" th:selected="${post.category}=='work'">Work Experience</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="contents"> 내용 </label>
                         <textarea class="form-control" id="contents" rows="10" th:text="${post.contents}"></textarea>
                     </div>
