--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -11,7 +11,7 @@
             <div class="col-md-12">
                 <form>
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                    <input type="hidden" id="id" th:value="${post.id}">
+                    <input type="hidden" id="post_id" th:value="${post.id}">
                     <div class="form-group">
                         <label for="title"> 제목 </label>
                         <input type="text" class="form-control" id="title" th:value="${post.title}">
