https://hkpark130.p-e.kr:8080/issues/24

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="headerFragment">
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="Sk7cT2tu0lFIDi21daajhctPlPxRsVrNOuT6hSSD0C8" />
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>Spring Blog</title>
