--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/network">Network</a>
                     <a class="dropdown-item" href="/programming">Programming Language</a>
+                    <a class="dropdown-item" href="/cs">CS 지식</a>
                     <a class="dropdown-item" href="/etc">ETC</a>
                 </div>
             </li>
