--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -18,6 +18,7 @@
                     <label for="category">카테고리</label>
                     <select class="form-control" id="category">
                         <option value="etc" selected>ETC</option>
+                        <option value="cs">CS 지식</option>
                         <option value="programming">Programming Language</option>
                         <option value="network">Network</option>
                         <option sec:authorize="hasRole('ROLE_ADMIN')" value="work">Work Experience</option>
